@startuml
skinparam classAttributeIconSize 0
class VowelFilter{
VowelFilter(wrappee : Filter)
+ next() : String
}
VowelFilter --|> TextFilterDecorator
class Main{
+ {static} main(args : String[]) : void
}
class TextFilterDecorator{
- wrappee : Filter
TextFilterDecorator(wrappee : Filter)
+ hasNext() : boolean
+ next() : String
}
TextFilterDecorator ..|> Filter
class NormalizationFilter{
NormalizationFilter(wrappee : Filter)
+ next() : String
}
NormalizationFilter --|> TextFilterDecorator
class TermFilter{
text : List<String>
TermFilter(wrappee : Filter)
+ hasNext() : boolean
+ next() : String
}
TermFilter --|> TextFilterDecorator
class TextReader{
- file : Scanner
TextReader(fileName : String)
+ hasNext() : boolean
+ next() : String
}
TextReader ..|> Filter
class CapitalizationFilter{
CapitalizationFilter(wrappee : Filter)
+ next() : String
}
CapitalizationFilter --|> TextFilterDecorator
TextFilterDecorator--"- wrappee" Filter
interface Filter{
hasNext() : boolean
next() : String
}
@enduml